argo-workflows/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - argo-workflows.dgoeke.io
    secretName: argo-workflows-prod
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: argo-server
           port:
             number: 2746
    host: argo-workflows.dgoeke.io
